applications/istio-1-15/istio-resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  tls:
    - hosts:
        - staging.mlops-playground.com
      secretName: tls-cert
  rules:
  - host: staging.mlops-playground.com
    http:
      paths:     
        - path: /
          pathType: Prefix
          backend:
            service:
              name: istio-ingressgateway
              port:
                number: 443 # even though ingress traffic will be directed to the service
                            # it will be intercepted bt the istio- sidecar proxy and redirected to the mesh
